--- a/etc/supervisor.d/docker.conf
+++ b/etc/supervisor.d/docker.conf
@@ -1,3 +1,3 @@
 [program:docker]
 command=/usr/local/bin/wrapdocker
-environment=DOCKER_DAEMON_ARGS="--insecure-registry camunda-ci1.local:5000"
+environment=DOCKER_DAEMON_ARGS="--insecure-registry ci1.camunda.loc:5000"
